FIXED HORIZONTAL SCROLLING

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@
 GLOBAL
 ---------------------------------------*/
 html{
-	overflow:hidden;
+	/*overflow:hidden;*/
 	}
 
 a {
